--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"daisyui": "^4.4.19"
+	}
 }
